--- a/src/components/HeroWebGL.astro
+++ b/src/components/HeroWebGL.astro
@@ -229,7 +229,8 @@
                 offCtx.font = `700 ${fontSize}px 'Geist', sans-serif`;
                 offCtx.textAlign = 'left';
                 offCtx.textBaseline = 'middle';
-                
+                offCtx.textWrap = 'pretty';
+
                 const text = "I help artists & causes create tangible experiences that demand attention and intimacy, to affect change locally and around the world.";
                 
                 /* --- FIX: Alignment & Wrapping --- */
@@ -498,7 +499,6 @@
         left: 0;
         width: 100%;
         height: 100%;
-        padding-left: 10svw;
 
     }
     
@@ -510,7 +510,6 @@
         height: 100%;
         pointer-events: none;
         z-index: 10;
-        padding-left: 10svw;
 
     }
 
