--- a/src/pages/work/[slug].astro
+++ b/src/pages/work/[slug].astro
@@ -351,6 +351,10 @@ function renderRichText(content: any): string {
     height: auto;
     display: block;
     background: rgba(0, 0, 0, 0.1);
+    border-radius: 30px;
+    border-width: 2px;
+    border-color: black;
+    overflow: hidden;
   }
 
   .video-wrapper {
@@ -366,6 +370,10 @@ function renderRichText(content: any): string {
     left: 0;
     width: 100%;
     height: 100%;
+    border-radius: 30px;
+    border-width: 2px;
+    border-color: black;
+    overflow: hidden;
   }
 
   .caption {
